--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,9 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "installCommand": "npm install",
+        "buildCommand": "npm run build"
       }
     }
   ],
@@ -16,6 +18,7 @@
     }
   ],
   "env": {
-    "VITE_APP_ENV": "production"
+    "VITE_APP_ENV": "production",
+    "NODE_ENV": "production"
   }
 } 
