--- a/package.json
+++ b/package.json
@@ -13,73 +13,71 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "3.3.4",
-    "@radix-ui/react-accordion": "1.1.2",
-    "@radix-ui/react-alert-dialog": "1.0.5",
-    "@radix-ui/react-aspect-ratio": "1.0.3",
-    "@radix-ui/react-avatar": "1.0.4",
-    "@radix-ui/react-checkbox": "1.0.4",
-    "@radix-ui/react-collapsible": "1.0.3",
-    "@radix-ui/react-context-menu": "2.1.5",
-    "@radix-ui/react-dialog": "1.0.5",
-    "@radix-ui/react-dropdown-menu": "2.0.6",
-    "@radix-ui/react-hover-card": "1.0.7",
-    "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-menubar": "1.0.4",
-    "@radix-ui/react-navigation-menu": "1.1.4",
-    "@radix-ui/react-popover": "1.0.7",
-    "@radix-ui/react-progress": "1.0.3",
-    "@radix-ui/react-radio-group": "1.1.3",
-    "@radix-ui/react-scroll-area": "1.0.5",
-    "@radix-ui/react-select": "1.2.3",
-    "@radix-ui/react-separator": "1.0.3",
-    "@radix-ui/react-slider": "1.1.2",
-    "@radix-ui/react-slot": "1.0.2",
-    "@radix-ui/react-switch": "1.0.3",
-    "@radix-ui/react-tabs": "1.0.4",
-    "@radix-ui/react-toast": "1.1.5",
-    "@radix-ui/react-toggle": "1.0.3",
-    "@radix-ui/react-toggle-group": "1.0.4",
-    "@radix-ui/react-tooltip": "1.0.7",
-    "@tanstack/react-query": "5.17.19",
-    "class-variance-authority": "0.7.0",
-    "clsx": "2.1.0",
-    "cmdk": "0.2.1",
-    "date-fns": "3.3.1",
-    "embla-carousel-react": "8.0.0",
-    "input-otp": "1.1.0",
-    "lucide-react": "0.330.0",
-    "next-themes": "0.2.1",
-    "react": "18.2.0",
-    "react-day-picker": "8.10.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.49.3",
-    "react-resizable-panels": "2.0.9",
-    "react-router-dom": "6.21.3",
-    "recharts": "2.10.4",
-    "sonner": "1.4.0",
-    "tailwind-merge": "2.2.1",
-    "tailwindcss-animate": "1.0.7",
-    "vaul": "0.8.0",
-    "zod": "3.22.4"
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^4.36.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.0.0-rc14",
+    "input-otp": "^1.0.1",
+    "lucide-react": "^0.292.0",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-day-picker": "^8.9.1",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-resizable-panels": "^0.0.55",
+    "react-router-dom": "^6.18.0",
+    "recharts": "^2.9.3",
+    "sonner": "^1.2.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.7.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/js": "8.56.0",
-    "@tailwindcss/typography": "0.5.10",
-    "@types/node": "20.11.16",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
-    "@vitejs/plugin-react-swc": "3.5.0",
-    "autoprefixer": "10.4.17",
-    "eslint": "8.56.0",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.4.5",
-    "globals": "13.24.0",
-    "lovable-tagger": "1.1.7",
-    "postcss": "8.4.33",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.3.3",
-    "typescript-eslint": "6.19.1",
-    "vite": "5.0.12"
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vercel/static-build": "^2.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   }
 }
