--- a/vercel.json
+++ b/vercel.json
@@ -5,20 +5,14 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist",
-        "installCommand": "npm install",
-        "buildCommand": "npm run build"
+        "distDir": "dist"
       }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/"
     }
-  ],
-  "env": {
-    "VITE_APP_ENV": "production",
-    "NODE_ENV": "production"
-  }
+  ]
 } 
