--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "cmdk": "0.2.0",
     "date-fns": "2.30.0",
     "embla-carousel-react": "8.0.0-rc14",
+    "firebase": "10.8.0",
     "input-otp": "1.0.1",
     "lucide-react": "0.292.0",
     "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-day-picker": "8.9.1",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "5.1.1",
     "react-hook-form": "7.48.2",
     "react-resizable-panels": "0.0.55",
     "react-router-dom": "6.18.0",
