--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
+    "@types/react-router-dom": "^5.3.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0"
   }
