--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.76.0",
     "@types/node": "^20.11.19",
