--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-aspect-ratio": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.76.0",
     "@types/node": "^20.11.19",
