--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "add": "^2.0.6",
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -25,9 +26,12 @@
     "formidable": "^3.5.1",
     "lucide-react": "^0.331.0",
     "next": "14.1.0",
+    "package-lock.json": "^1.0.0",
+    "package.json": "^2.0.1",
     "pandas-js": "^0.2.4",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.0",
     "tailwind-merge": "^2.2.1",
