--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.6.0",
     "exceljs": "^4.4.0",
     "formidable": "^3.5.1",
     "lucide-react": "^0.331.0",
