--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-day-picker": "^9.6.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
