--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "exceljs": "^4.4.0",
     "formidable": "^3.5.1",
