--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-aspect-ratio": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-context-menu": "^2.2.14",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.76.0",
     "@types/node": "^20.11.19",
