--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,8 @@
     "jsx": "preserve",
     "strict": false,
     "noEmit": true,
-    "incremental": true,
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-    "exclude": ["node_modules"]
-  }
+    "incremental": true
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
