--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "site",
+  "name": "suna",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,45 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.10",
-    "@radix-ui/react-alert-dialog": "^1.1.13",
-    "@radix-ui/react-aspect-ratio": "^1.1.6",
-    "@radix-ui/react-avatar": "^1.1.9",
-    "@radix-ui/react-checkbox": "^1.3.1",
-    "@radix-ui/react-context-menu": "^2.2.14",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^5.76.0",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "add": "^2.0.6",
-    "autoprefixer": "^10.4.17",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.17.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^1.1.1",
-    "embla-carousel-react": "^8.6.0",
-    "exceljs": "^4.4.0",
-    "formidable": "^3.5.1",
-    "lucide-react": "^0.331.0",
-    "next": "14.1.0",
-    "package-lock.json": "^1.0.0",
-    "package.json": "^2.0.1",
-    "pandas-js": "^0.2.4",
-    "postcss": "^8.4.35",
-    "react": "^18.2.0",
-    "react-day-picker": "^9.6.7",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.0",
-    "recharts": "^2.15.3",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.1",
+    "firebase": "^10.7.2",
+    "framer-motion": "^10.18.0",
+    "lucide-react": "^0.309.0",
+    "next": "14.0.4",
+    "next-themes": "^0.2.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
+    "react-router-dom": "^6.21.3",
+    "sonner": "^1.3.1",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/formidable": "^3.4.5",
-    "@types/react-router-dom": "^5.3.3",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
