--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.15.3",
     "remark-gfm": "^4.0.1",
