--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/view": "^6.36.8",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -38,11 +39,18 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.77.0",
+    "@uiw/codemirror-extensions-langs": "^4.23.12",
+    "@uiw/codemirror-theme-vscode": "^4.23.12",
+    "@uiw/codemirror-theme-xcode": "^4.23.12",
+    "@uiw/react-codemirror": "^4.23.12",
+    "@usebasejump/shared": "^0.0.3",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "color-bits": "^1.1.0",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^10.7.2",
+    "exceljs": "^4.4.0",
+    "firebase": "^10.14.1",
     "framer-motion": "^10.18.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.309.0",
@@ -50,6 +58,7 @@
     "motion": "^12.12.2",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "pandas-js": "^0.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
@@ -59,7 +68,8 @@
     "recharts": "^2.15.3",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.7.4",
-    "tailwind-merge": "^2.2.0",
+    "swr": "^2.3.3",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.22.4"
