--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.77.0",
+    "@types/formidable": "^3.4.5",
     "@uiw/codemirror-extensions-langs": "^4.23.12",
     "@uiw/codemirror-theme-vscode": "^4.23.12",
     "@uiw/codemirror-theme-xcode": "^4.23.12",
@@ -51,6 +52,7 @@
     "embla-carousel-react": "^8.6.0",
     "exceljs": "^4.4.0",
     "firebase": "^10.14.1",
+    "formidable": "^3.5.4",
     "framer-motion": "^10.18.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.309.0",
