--- a/package.json
+++ b/package.json
@@ -77,15 +77,17 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.17.50",
     "@types/react": "^18",
     "@types/react-day-picker": "^5.2.1",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^6.3.5"
   }
 }
