--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "color-bits": "^1.1.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "exceljs": "^4.4.0",
     "firebase": "^10.14.1",
@@ -62,6 +63,7 @@
     "next-themes": "^0.2.1",
     "pandas-js": "^0.2.4",
     "react": "^18",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-markdown": "^10.1.0",
